Fixed content spill over footer div. Added Clear:both to #MainFooter.

--- a/css/core.css
+++ b/css/core.css
@@ -202,6 +202,7 @@ ul {
 	height: 111px;
 	width: 100%;
 	background: #708e2a;
+	clear: both;
 }
 
 #MainFooter > div {
